--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,5 @@ html
   head
     
   body
-    script(type="text/javascript" src=script)
+    //script(type="text/javascript" src=script)
+    #{script}
