--- a/views/home.pug
+++ b/views/home.pug
@@ -4,5 +4,6 @@ html
   body
     div 
       form(action="/convert", method="post")
+        input(type="text" name="name")
         textarea(name = "python", rows="50", cols="80")
         input(type="submit")
