--- a/views/home.pug
+++ b/views/home.pug
@@ -1,9 +1,16 @@
-html 
-  head
+<html>
+  <head>
+		<script type="text/javascript" src="path/to/script.js"></script>
+  </head>
 
-  body
-    div 
-      form(action="/convert", method="post")
-        input(type="text" name="name")
-        textarea(name = "python", rows="50", cols="80")
-        input(type="submit")
+  <body>
+    <div> 
+      <form(action="/convert", method="post")>
+		<input(type="text" name="name")/>
+		<textarea(name = "python", rows="50", cols="80")/>
+		<input(type="submit")/>
+	  </form>
+	</div>
+	
+  </body>
+</html>	
